# agentic-investor

./: .gitignore  README.md  chat.py  pyproject.toml
agentic_investor/: server.py
agentic_investor/interfaces/: resource.py
agentic_investor/services/: prompt_service.py  resource_service.py  tool_service.py
agentic_investor/tools/cnn_fear_greed/: cnn_fear_greed.py  models.py
agentic_investor/tools/crypto_fear_greed/: __init__.py  crypto_fear_greed.py  models.py
agentic_investor/tools/earnings_history/: __init__.py  earnings_history.py  models.py
agentic_investor/tools/financial_statements/: financial_statements.py  models.py
agentic_investor/tools/google_trends/: __init__.py  google_trends.py  models.py
agentic_investor/tools/insider_trades/: insider_trades.py  models.py
agentic_investor/tools/institutional_holders/: __init__.py  institutional_holders.py  models.py
agentic_investor/tools/intraday_data/: intraday_data.py  models.py
agentic_investor/tools/market_movers/: market_movers.py  models.py
agentic_investor/tools/nasdaq_earnings_calendar/: models.py  nasdaq_earnings_calendar.py
agentic_investor/tools/options/: models.py  options.py
agentic_investor/tools/price_history/: __init__.py  models.py  price_history.py
agentic_investor/utils/: __init__.py  logger.py  middleware.py  yfinance_helpers.py
investor_agent/: server.py
investor_agent/interfaces/: prompt.py
investor_agent/services/: resource_service.py  tool_service.py
investor_agent/utils/: formatters.py  http_client.py  validators.py  yfinance_helpers.py
(+44 files in other folders)
